--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "remotePath": "",
             "port": 2345,
             "host": "127.0.0.1",
-            "program": "${workspaceRoot}/tbspider",
+            "program": "${workspaceRoot}/tbspider/tbspider",
             "env": {"GOPATH":"${workspaceRoot}/../../../../"},
             //"args": ["-configpath", "conf/app.conf"],
             "showLog": true
